--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "axios": "^0.24.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-flickity-component": "^3.6.2",
     "react-scripts": "4.0.3",
     "sass": "^1.32.11",
     "three": "^0.132.2",
