--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/flickity": "^2.2.6",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
@@ -16,6 +17,7 @@
     "react-flickity-component": "^3.6.2",
     "react-scripts": "4.0.3",
     "sass": "^1.32.11",
+    "swiper": "^7.3.1",
     "three": "^0.132.2",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
