--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^17.0.2",
     "react-flickity-component": "^3.6.2",
     "react-scripts": "4.0.3",
+    "recharts": "^2.1.8",
     "sass": "^1.32.11",
     "swiper": "^7.3.1",
     "three": "^0.132.2",
